# api/proto/git/git.pb.validate.go
@@ -1285,6 +1285,111 @@ var _ interface {
 	ErrorName() string
 } = PipelineInfoRequestValidationError{}
 
+// Validate checks the field values on PipelineJob with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *PipelineJob) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on PipelineJob with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in PipelineJobMultiError, or
+// nil if none found.
+func (m *PipelineJob) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *PipelineJob) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Name
+
+	// no validation rules for Status
+
+	// no validation rules for StageName
+
+	if len(errors) > 0 {
+		return PipelineJobMultiError(errors)
+	}
+
+	return nil
+}
+
+// PipelineJobMultiError is an error wrapping multiple validation errors
+// returned by PipelineJob.ValidateAll() if the designated constraints aren't met.
+type PipelineJobMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m PipelineJobMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m PipelineJobMultiError) AllErrors() []error { return m }
+
+// PipelineJobValidationError is the validation error returned by
+// PipelineJob.Validate if the designated constraints aren't met.
+type PipelineJobValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e PipelineJobValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e PipelineJobValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e PipelineJobValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e PipelineJobValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e PipelineJobValidationError) ErrorName() string { return "PipelineJobValidationError" }
+
+// Error satisfies the builtin error interface
+func (e PipelineJobValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sPipelineJob.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = PipelineJobValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = PipelineJobValidationError{}
+
 // Validate checks the field values on PipelineInfoResponse with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
@@ -1310,6 +1415,40 @@ func (m *PipelineInfoResponse) validate(all bool) error {
 	// no validation rules for Status
 
 	// no validation rules for WebUrl
+
+	for idx, item := range m.GetJobs() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, PipelineInfoResponseValidationError{
+						field:  fmt.Sprintf("Jobs[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, PipelineInfoResponseValidationError{
+						field:  fmt.Sprintf("Jobs[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return PipelineInfoResponseValidationError{
+					field:  fmt.Sprintf("Jobs[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
 
 	if len(errors) > 0 {
 		return PipelineInfoResponseMultiError(errors)
